--- a/Code/eCommerce MVC/DAL/DAL.csproj
+++ b/Code/eCommerce MVC/DAL/DAL.csproj
@@ -84,6 +84,8 @@
     <Compile Include="OrderItem.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="OrderItem\OrderItemDAL.cs" />
+    <Compile Include="Order\OrderDAL.cs" />
     <Compile Include="ProductMaster.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
