--- a/Code/eCommerce MVC/eCommerce MVC/eCommerce MVC.csproj
+++ b/Code/eCommerce MVC/eCommerce MVC/eCommerce MVC.csproj
@@ -222,12 +222,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
+    <Compile Include="Controllers\OrderController.cs" />
+    <Compile Include="Controllers\OrderItemController.cs" />
     <Compile Include="Controllers\ProductMasterController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CartItems.cs" />
     <Compile Include="Models\CustomerViewModel.cs" />
+    <Compile Include="Models\OrderItemViewModel.cs" />
     <Compile Include="Models\OrderViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -235,7 +238,6 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Views\ProductMaster\ProductList.cshtml" />
-    <Content Include="Views\Customer\OrderList.cshtml" />
     <Content Include="Views\Shared\_Layout2.cshtml" />
     <Content Include="Views\ProductMaster\Home.cshtml" />
     <Content Include="Views\ProductMaster\ProductDetils.cshtml" />
@@ -252,6 +254,8 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\Order\OrderList.cshtml" />
+    <Content Include="Views\OrderItem\OrderDetails.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
